assets/css/browse.css
@font-face {
    font-family: Netflix Sans;
    src: url(../fonts/Regular.woff2);
  }
  body,html{
      font-family: 'Netflix Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
      font-size: 16px;
      margin: 0;
      padding: 0;
      width: 100%;
      position: relative;
      background-color: black;
      z-index: -1;
  }
  /* main styling start */
 header, .container, .mylist, .continue-watching{
     z-index: 10;
 }
 .image-size{
     max-width: 94%;
 }
  /* header styling */
  header{
      line-height: 0.4;
      background-image: linear-gradient(to bottom, rgba(24, 24, 24, 0.7) 0%, rgba(58, 58, 58, 0.5) 50%,rgba(99, 99, 99, 0.2) 90%, rgba(20, 20, 20, 0.0001) 100%);
      min-height: 68px;
      padding: 0 40px;
      position: fixed;
      width: 95%;
      z-index: 25;
  }
  @media (max-width: 600px){
      header{
          padding: 0px 0px;
          width: 100%;
      }
  }
  .logo{
      text-decoration: none;
      font-weight: 800;
      transform: translateZ(2);
  }
  .second-logo-text{
      display: none;
  }
  @media (max-width: 568px){
      .logo{
          display: none;
      }
      .second-logo-text{
        display: block;
        font-size: 40px;
        margin-left: 10px;
        text-decoration: none;
        font-weight: 800;
        transform: translateZ(2);
      }
  }
  .nav-item{
      padding: 0px 15px;
  }
  .righticons img{
      width: 22px;
      margin-right: 25px;
      color: white;
  }

/* dropdown styling header notification start */
  .notification .dropdown-content{
      right: 6%;
      border-top: 3px solid white;
      padding-top: 0;
      padding-bottom: 0;
  }
  .notification .dropdown-content a{
      border-bottom: 1px solid rgb(85, 85, 85);
      color: rgb(226, 226, 226);
  }
  .notification .dropdown-content span{
    font-size: 13px;
    font-weight: 300;
    padding-left: 5px;
  }
  .notification .dropdown-content::after{
    position: absolute;
    z-index: 20000;
    content: "";
    top: -30px;
    right: 0px;
    width: 100%;
    height: 38px;
    background-color: #ffffff00;
  }

/* dropdown styling header notification end */
.righticons .user-icon{
    width: 30px;
    margin-right: 4px;
    cursor: pointer;
}
.righticons .profile-arrow{
    cursor: pointer;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 5px 5px 0 5px;
    border-color: #fff transparent transparent transparent;
    margin-left: 0px;
    display: inline-block;
    vertical-align: middle;
  }

  /* dropdown styling header user account */
  .dropdown{
      cursor: pointer;
  }

  .dropdown-content {
    display: none;
    flex-direction: column;
    margin-top: 20px;
    padding: 20px 0px;
    right: 2%;
    position: absolute;
    background-color: rgb(41, 41, 41);
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  .dropdown-content::after{
    position: absolute;
    content: "";
    top: -20px;
    right: 0px;
    width: 100%;
    height: 22px;
    background-color: #ffffff00;
  }
  .dropdown-content::before{
    position: absolute;
    content: "";
    top: -10px;
    right: 23px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 10px 10px 0 10px;
    border-color: #fff transparent transparent transparent;
    margin-left: 0px;
    display: inline-block;
    transform: rotate(180deg);
  }
  .dropdown-content .line{
      height: 1px;
      border: none;
      opacity: 0.4;
      margin: 15px 0px;
      background-color: white;
      width: 100%;
  }
  .dropdown-content a {
    float: none;
    color: white;
    font-size: 14px;
    padding: 12px 16px;
    text-decoration: none;
    text-align: left;
  }
  .righticons .dropdown:hover .dropdown-content{
    display: block;
}
.profile-links{
    font-family: Arial, Helvetica, sans-serif;
}
.profile-links span{
    font-size: 13px;
    font-weight: 300;
    padding-left: 5px;
}
.profile-links .last{
    margin-top: 10px;
}

  @media (max-width: 760px){
      .righticons{
          display: none;
      }
  }

  /* hero section styling */
  .hero-background-image{
    z-index: -1;
    position: absolute;
    background-position: center center;
    background-size: 100%;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
  }
  #browse-dashboard video{
    object-fit:fill
  
  }

  @media (max-width: 750px){
      .hero-background-image{
        width: auto;
        height: 80vh;
      }
  }

  .shadow-layer{
    background: -webkit-linear-gradient(13deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 85%);
    background: -moz- oldlinear-gradient(13deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 85%);
    background: -o-linear-gradient(13deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 85%);
    background: linear-gradient(77deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 85%);
    position: absolute;
    top: 0;
    left: 0;
    right: 26.09%;
    bottom: 0;
    opacity: 1;
    z-index: -1;
    -webkit-transition: opacity 500ms;
    -o-transition: opacity 500ms;
    -moz-transition: opacity 500ms;
    transition: opacity 500ms;
  }
 
  #browse-dashboard{
      padding-top: 120px;
  }
  @media (max-width: 600px){
      #browse-dashboard .text-container{
        width: 100%;
        margin-left: 10px;
      }
  }
  #browse-dashboard .show-logo{
      max-width:380px;
  }
  #browse-dashboard .ranking svg{
      width: 25px;
  }
  #browse-dashboard .ranking span{
    color: #fff;
    font-weight: bold;
    line-height: normal;
    font-size: 20px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
    margin-top: .1vw;
  }
  #browse-dashboard .synopsis p{
    color: #fff;
    font-weight: normal;
    line-height: 1.4;
    width: 100%;
    font-size: 20px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
  }
  .buttons-container button{
    border-radius: 3px;
    padding-left: calc(3.6rem / 2);
    padding-right: calc(3.6rem / 2);
    padding-top: 0.4rem;
    padding-bottom: 0.4rem;
    color: black;
    transition: all .3s;
    cursor: pointer;
    font-size: var(--font-size-18);
    border: 0;
    margin-right: 1rem;
  }
  .buttons-container svg{
    width: 25px;
    margin-bottom: -5px;
  }
  .buttons-container .play-button{
    background: white;
    color: black;
    border: 0;
  }
  .buttons-container .more-info-button{
    background-color: rgba(133,133,133,0.6);
    color: white;
    font-weight: bold;
  }
  .play-button a{
      color: black;
  }

  #continue-watching{
    box-shadow: 20px 10px 30px 180px black;
  }

  /* owl carousel */

  .owl-prev{
    position: absolute;
    top: 20%;
    left: -16px;
    padding-right: 30px;
  }
  .owl-next{
    position: absolute;
    top: 20%;
    right: -8px;
  }

  .owl-prev:hover .owl-prev span{
      display: block;
  }
  .owl-next:hover .owl-next span{
    display: block;
}

  .owl-prev span, .owl-next span{
      font-size: 50px;
      display: none;
  }
  .owl-carousel:hover .owl-prev span{
    display: block;
}
.owl-carousel:hover .owl-next span{
    display: block;
}

  @media (max-width: 769px){
      .owl-prev, .owl-next{
          top: 10%;
      }
  }
  @media (max-width: 500px){
    .owl-prev, .owl-next{
        top: -10%;
    }
}

/* my list */

#mylist{
    padding-top: 140px;
    position: relative;
}
@media (max-width: 900px){
    #mylist{
            padding-top: 40px;
    }
}
/* universal video hover styling */

.video-item{
    position: relative;
    max-width: 100%;
    transition: transform 0.2s;
    z-index: 5;
    cursor: pointer;
}
.video-description{
    z-index: 6;
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;
    right: 0;
}
.video-description{
    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 85%);
    padding: 8px;
    cursor: pointer;
    transition: all 0.2s;
    opacity: 0;
    transform: scale(0);
    transform-origin: bottom left;
    display: flex;
}
.video:hover .video-description{
    opacity: 1;
    transform: scale(1);
}
.video-description .play-button svg{
    width: 30px;
    background-color: white;
    border-radius: 50%;
    padding: 3px;
}
.video-description h4{
    font-size: 18px;
}
.video-description .info p{
    font-size: 14px;
}
.video-description .info .rated{
    border: 1px dashed white;
    margin-right: 4px;
    font-size: 12px;
}
.video-description .genere{
    padding-top: 5px;
    padding-bottom: 5px;
}
.video-description .genere p{
    padding-right: 3px;
    font-size: 12px;
}
@media (max-width: 490px){
   .video-description{
       display: none;
   }
}
/* big section */
.big-section{
    margin-top: 40px;
    flex-basis: 100%;
    flex-wrap: nowrap;
}
.big-section img{
    max-width: 50%;
    padding-right: 30px;
}
@media (max-width: 870px){
    .big-section{
        flex-wrap: wrap;
        justify-content: center;
    }
    .big-section img{
        max-width: 100%;
        padding-right:0px;
        margin-bottom: 30px;
    }
}

/* footer */

footer{
    color: #808080 !important;
    padding-top: 80px;
}
footer .footer-container{
    max-width: 800px;
}
.widgets div{
    margin: 10 10px;
}
footer ul{
    margin: 0;
    padding: 0;
}
footer ul li{
    list-style: none;
    padding: 6px 10px;
    font-size: 14px;
    cursor: pointer;
}

.service{
    border: 1px solid #808080;
    color: #808080 !important;
    background-color: transparent !important;
    margin: 20px 0px;
}

/* footer navigation */
.footer-navigation {
    display: none;
    z-index: 25;
    overflow: hidden;
    padding: 0px 0px;
    background-color: rgb(22, 22, 22);
    position: fixed;
    bottom: 0;
    width: 100%;
    
  }
  
  .footer-navigation a {
    flex-grow: 1;
    display: block;
    color: #f2f2f26b;
    text-align: center;
    padding: 5px 16px;
    text-decoration: none;
    font-size: 13px;
  }
  
  .footer-navigation a:hover {
    background: #f1f1f1;
  }
  
  .footer-navigation a.active {
    color: rgba(255, 255, 255, 0.726);
    background-color: rgb(36, 36, 36);
  }

  /* mobile navigation setting */
  @media(max-width: 600px){
      .home{
          display: none;
      }
      .latest{
          display: none;
      }
      .footer-navigation{
        display: flex;
    }
  }

  
  

